<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="action_continue">Continue</string>
    <string name="action_report_an_issue">Report an issue</string>
    <string name="action_upload_done">Continue</string>
    <string name="action_upload_your_data">Upload your data</string>
    <string name="action_verify_invalid_pin">Invalid PIN, please ask the health official to send you another PIN.</string>
    <string name="action_verify_upload_pin">Upload my information</string>
    <string name="activity_self_isolation_button">Continue</string>
    <string name="activity_self_isolation_content">You’ve kept others safe while helping to stop the spread of COVID-19 during self-isolation.</string>
    <string name="activity_self_isolation_headline">Thank you! You have helped to stop the spread of COVID-19!</string>
    <string name="app_name">COVIDSafe</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="build_config_package">au.gov.health.covidsafe</string>
    <string name="change_device_name_content_line_1">The current name of your device is %s.</string>
    <string name="change_device_name_content_line_2">Other Bluetooth® devices around you will be able to see this name. We recommend to use a device name that does not include your personal details.</string>
    <string name="change_device_name_default_device_name">Android phone</string>
    <string name="change_device_name_headline">Your device name</string>
    <string name="change_device_name_headline_content_description">Heading, Your device name</string>
    <string name="change_device_name_new_device_name">New device name</string>
    <string name="change_device_name_primary_action">Change and continue</string>
    <string name="change_device_name_secondary_action">Skip and keep as it is</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="chip_text">Chip text</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="consent_button">I agree</string>
    <string name="consent_call_for_action">Select \'I agree\' to confirm consent.</string>
    <string name="country_ad">Andorra</string>
    <string name="country_ae">United Arab Emirates</string>
    <string name="country_af">Afghanistan</string>
    <string name="country_ag">Antigua and Barbuda</string>
    <string name="country_ai">Anguilla</string>
    <string name="country_al">Albania</string>
    <string name="country_am">Armenia</string>
    <string name="country_an">Netherlands Antilles</string>
    <string name="country_ao">Angola</string>
    <string name="country_ar">Argentina</string>
    <string name="country_at">Austria</string>
    <string name="country_au">Australia</string>
    <string name="country_aw">Aruba</string>
    <string name="country_az">Azerbaijan</string>
    <string name="country_ba">Bosnia and Herzegovina</string>
    <string name="country_bb">Barbados</string>
    <string name="country_bd">Bangladesh</string>
    <string name="country_be">Belgium</string>
    <string name="country_bf">Burkina Faso</string>
    <string name="country_bg">Bulgaria</string>
    <string name="country_bh">Bahrain</string>
    <string name="country_bi">Burundi</string>
    <string name="country_bj">Benin</string>
    <string name="country_bm">Bermuda</string>
    <string name="country_bn">Brunei</string>
    <string name="country_bo">Bolivia</string>
    <string name="country_br">Brazil</string>
    <string name="country_bs">Bahamas</string>
    <string name="country_bt">Bhutan</string>
    <string name="country_bw">Botswana</string>
    <string name="country_by">Belarus</string>
    <string name="country_bz">Belize</string>
    <string name="country_ca">Canada</string>
    <string name="country_cd">Democratic Republic of the Congo</string>
    <string name="country_cf">Central African Republic</string>
    <string name="country_cg">Republic of the Congo</string>
    <string name="country_ch">Switzerland</string>
    <string name="country_ci">Ivory Coast</string>
    <string name="country_ck">Cook Islands</string>
    <string name="country_cl">Chile</string>
    <string name="country_cm">Cameroon</string>
    <string name="country_cn">China</string>
    <string name="country_co">Colombia</string>
    <string name="country_cr">Costa Rica</string>
    <string name="country_cu">Cuba</string>
    <string name="country_cv">Cape Verde</string>
    <string name="country_cw">Curaçao</string>
    <string name="country_cy">Cyprus</string>
    <string name="country_cz">Czech Republic</string>
    <string name="country_de">Germany</string>
    <string name="country_dj">Djibouti</string>
    <string name="country_dk">Denmark</string>
    <string name="country_dm">Dominica</string>
    <string name="country_do">Dominican Republic</string>
    <string name="country_dz">Algeria</string>
    <string name="country_ec">Ecuador</string>
    <string name="country_ee">Estonia</string>
    <string name="country_eg">Egypt</string>
    <string name="country_es">Spain</string>
    <string name="country_et">Ethiopia</string>
    <string name="country_fi">Finland</string>
    <string name="country_fj">Fiji</string>
    <string name="country_fo">Faroe Islands</string>
    <string name="country_fr">France</string>
    <string name="country_ga">Gabon</string>
    <string name="country_gb">United Kingdom</string>
    <string name="country_gd">Grenada</string>
    <string name="country_ge">Georgia</string>
    <string name="country_gf">French Guiana</string>
    <string name="country_gh">Ghana</string>
    <string name="country_gi">Gibraltar</string>
    <string name="country_gl">Greenland</string>
    <string name="country_gm">Gambia</string>
    <string name="country_gn">Guinea</string>
    <string name="country_gp">Guadeloupe</string>
    <string name="country_gq">Equatorial Guinea</string>
    <string name="country_gr">Greece</string>
    <string name="country_gt">Guatemala</string>
    <string name="country_gu">Guam</string>
    <string name="country_gw">Guinea-Bissau</string>
    <string name="country_gy">Guyana</string>
    <string name="country_hk">Hong Kong</string>
    <string name="feedback_email_address_required">Email address (Required)</string>
    <string name="feedback_found_an_issue_in_the_covidsafe_app">Found an issue in the COVIDSafe app?</string>
    <string name="feedback_please_describe_an_issue">Please describe an issue</string>
    <string name="feedback_we_may_reach_out_to_you_for_further_details_about_your_feedback">We may reach out to you for further details about your feedback.\10Your email address won`t be used for any other purpose.</string>
    <string name="home_app_permission_status_subtitle">COVIDSafe won\'t work without the right settings.</string>
    <string name="home_app_permission_status_title">Check your settings</string>
    <string name="home_bluetooth_permission">Bluetooth®: %s</string>
    <string name="home_location_permission">Location: %s</string>
    <string name="home_non_battery_optimization_permission">Battery optimization: %s</string>
    <string name="home_push_notification_permission">Push notification: %s</string>
    <string name="home_set_complete_external_link_app_content">Download the government app for the latest news and advice.</string>
    <string name="home_set_complete_external_link_app_title">Get the Coronavirus app</string>
    <string name="home_set_complete_external_link_been_contacted_content">You can only upload your information if you have tested positive.</string>
    <string name="home_set_complete_external_link_been_contacted_title">Has a health official contacted you?</string>
    <string name="home_set_complete_external_link_news_content">Head to aus.gov.au for the latest Coronavirus news.</string>
    <string name="home_set_complete_external_link_news_title">Latest news and updates</string>
    <string name="home_set_complete_external_link_share_content">Invite others to join. Together, we’re stronger.</string>
    <string name="home_set_complete_external_link_share_title">Share COVIDSafe</string>
    <string name="navigation_back_button_content_description">Previous page</string>
    <string name="upload_answer_no">No</string>
    <string name="upload_answer_yes">Yes</string>
    <string name="upload_finished_header">Thank you for helping to stop the spread of COVID-19!</string>
    <string name="upload_finished_header_content_description">Heading, Thank you for helping to stop the spread of COVID-19!</string>
    <string name="upload_finished_sub_header">You have successfully uploaded your information to the COVIDSafe highly secure storage system.\10\10State or territory health officials will notify other COVIDSafe users that have recorded instances of close contact with you. Your identity will remain anonymous to other users.</string>
    <string name="upload_step_1_body">Only if you test positive to COVID-19 will a state or territory health official contact you to assist with voluntary upload of your information.\10\10Once you press ‘Yes’ you’ll need to provide consent to upload your information.</string>
    <string name="upload_step_1_header">Is a health official asking you to upload your information?</string>
    <string name="upload_step_1_header_content_description">Heading, Is a health official asking you to upload your information?</string>
    <string name="upload_step_verify_pin_header">Upload your information</string>
    <string name="upload_step_verify_pin_header_content_description">Heading, Upload your information</string>
    <string name="upload_step_verify_pin_sub_header">A state or territory health official will send a PIN to your device via text message. Enter it below to upload your information.</string>
</resources>