<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:id="@+id/root" android:layout_width="match_parent" android:layout_height="wrap_content" android:fillViewport="true">
    <androidx.constraintlayout.widget.ConstraintLayout android:paddingBottom="@dimen/keyline_7" android:layout_width="match_parent" android:layout_height="wrap_content" android:paddingStart="@dimen/keyline_5" android:paddingEnd="@dimen/keyline_5">
        <ImageView android:id="@+id/permission_picture" android:layout_width="match_parent" android:layout_height="wrap_content" android:src="@drawable/ic_permission" app:layout_constraintLeft_toLeftOf="0" app:layout_constraintRight_toRightOf="0" app:layout_constraintTop_toTopOf="0"/>
        <TextView android:textAppearance="?attr/textAppearanceHeadline2" android:id="@+id/change_device_name_headline" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/keyline_6" android:text="@string/change_device_name_headline" android:contentDescription="@string/change_device_name_headline_content_description" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/permission_picture"/>
        <TextView android:textAppearance="?attr/textAppearanceBody1" android:id="@+id/change_device_name_content" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/keyline_4" android:text="@string/change_device_name_content_line_1" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/change_device_name_headline"/>
        <TextView android:textAppearance="?attr/textAppearanceBody1" android:id="@+id/change_device_name_new_device_name" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/keyline_6" android:text="@string/change_device_name_new_device_name" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/change_device_name_content"/>
        <EditText android:textSize="@dimen/text_body_small" android:textColor="@color/slack_black" android:textColorHighlight="@color/dark_cerulean_3" android:id="@+id/change_device_name_text_box" android:background="@drawable/edittext_modified_states" android:layout_width="0dp" android:layout_height="@dimen/text_field_height" android:layout_marginTop="@dimen/keyline_1" android:text="@string/change_device_name_default_device_name" android:maxLines="1" android:singleLine="true" android:textCursorDrawable="@null" android:paddingStart="@dimen/keyline_1" android:paddingEnd="@dimen/keyline_1" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/change_device_name_new_device_name"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
