<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:layout_width="match_parent" android:layout_height="wrap_content" app:layout_behavior="@string/appbar_scrolling_view_behavior">
    <androidx.constraintlayout.widget.ConstraintLayout android:id="@+id/feedback_content_parent" android:paddingLeft="@dimen/activity_horizontal_margin" android:paddingTop="@dimen/activity_vertical_margin" android:paddingRight="@dimen/activity_horizontal_margin" android:layout_width="match_parent" android:layout_height="wrap_content">
        <TextView android:textSize="18sp" android:textColor="#141515" android:id="@+id/feedback_content_title" android:padding="16dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/feedback_found_an_issue_in_the_covidsafe_app" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0"/>
        <com.google.android.material.textfield.TextInputLayout android:id="@+id/feedbackIssueDescriptionLayout" android:paddingLeft="16dp" android:paddingRight="16dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="16dp" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/feedback_content_title">
            <com.google.android.material.textfield.TextInputEditText android:textSize="16sp" android:id="@+id/feedbackIssueDescriptionEditText" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/feedback_please_describe_an_issue" android:inputType="none|text|textCapSentences|textAutoCorrect|textAutoComplete|textMultiLine"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout android:id="@+id/feedbackIssueEmailLayout" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="16dp" android:paddingStart="16dp" android:paddingEnd="16dp" app:hintEnabled="true" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/feedbackIssueDescriptionLayout">
            <com.google.android.material.textfield.TextInputEditText android:textSize="16sp" android:id="@+id/feedbackIssueEmailEditText" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/feedback_email_address_required" android:singleLine="true" android:inputType="textWebEmailAddress" android:imeOptions="actionSend"/>
        </com.google.android.material.textfield.TextInputLayout>
        <TextView android:textSize="12sp" android:textColor="#788586" android:paddingLeft="16dp" android:paddingRight="16dp" android:paddingBottom="32dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/feedback_we_may_reach_out_to_you_for_further_details_about_your_feedback" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/feedbackIssueEmailLayout"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
