<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:orientation="vertical" android:id="@+id/root" android:layout_width="match_parent" android:layout_height="match_parent">
    <androidx.appcompat.widget.Toolbar android:id="@+id/toolbar" android:layout_width="match_parent" android:layout_height="?attr/actionBarSize" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0" app:navigationContentDescription="@string/navigation_back_button_content_description" app:navigationIcon="@drawable/ic_up"/>
    <fragment android:name="androidx.navigation.fragment.NavHostFragment" android:id="@+id/fragment_nav_host_upload" android:layout_width="match_parent" android:layout_height="0dp" android:layout_weight="1" app:defaultNavHost="true" app:navGraph="@navigation/nav_upload"/>
    <au.gov.health.covidsafe.ui.view.SegmentedProgressBar android:id="@+id/upload_progress" android:layout_width="match_parent" android:layout_height="4dp" android:layout_marginTop="@dimen/keyline_4" android:layout_marginStart="@dimen/keyline_5" android:layout_marginEnd="@dimen/keyline_5" app:progress_max_value="5" app:progress_value="1"/>
    <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/keyline_4" android:layout_marginBottom="@dimen/keyline_7" android:layout_marginStart="@dimen/keyline_5" android:layout_marginEnd="@dimen/keyline_5">
        <Button android:id="@+id/upload_answerNo" android:layout_width="0dp" android:layout_height="wrap_content" android:text="@string/upload_answer_no" android:layout_weight="1" android:layout_marginEnd="@dimen/keyline_0" style="?attr/textAppearanceButton"/>
        <Button android:id="@+id/upload_answerYes" android:layout_width="0dp" android:layout_height="wrap_content" android:text="@string/upload_answer_yes" android:layout_weight="1" android:layout_marginStart="@dimen/keyline_0" style="?attr/textAppearanceButton"/>
        <Button android:id="@+id/upload_continue" android:layout_width="0dp" android:layout_height="wrap_content" android:text="@string/action_continue" android:layout_weight="1" style="?attr/textAppearanceButton"/>
    </LinearLayout>
</LinearLayout>
