<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:id="@+id/root" android:layout_width="match_parent" android:layout_height="wrap_content">
    <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:paddingStart="@dimen/keyline_5" android:paddingEnd="@dimen/keyline_5">
        <ImageView android:id="@+id/upload_initial_picture" android:layout_width="match_parent" android:layout_height="wrap_content" android:src="@drawable/ic_illustration_upload_inital_state" app:layout_constraintLeft_toLeftOf="0" app:layout_constraintRight_toRightOf="0" app:layout_constraintTop_toTopOf="0"/>
        <TextView android:textAppearance="?attr/textAppearanceHeadline2" android:id="@+id/upload_initial_headline" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/keyline_6" android:text="@string/upload_step_1_header" android:contentDescription="@string/upload_step_1_header_content_description" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/upload_initial_picture"/>
        <TextView android:textAppearance="?attr/textAppearanceBody1" android:id="@+id/upload_initial_content" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/keyline_4" android:text="@string/upload_step_1_body" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/upload_initial_headline"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
