<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:id="@+id/root" android:layout_width="match_parent" android:layout_height="wrap_content" android:fillViewport="true">
    <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent" android:layout_height="wrap_content">
        <TextView android:textAppearance="?attr/textAppearanceHeadline2" android:id="@+id/header" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginTop="@dimen/keyline_4" android:text="@string/upload_step_verify_pin_header" android:contentDescription="@string/upload_step_verify_pin_header_content_description" android:layout_marginStart="@dimen/keyline_5" android:layout_marginEnd="@dimen/keyline_5" app:layout_constraintBottom_toTopOf="@+id/subHeader" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0" app:layout_constraintVertical_chainStyle="2"/>
        <TextView android:id="@+id/subHeader" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginTop="@dimen/keyline_4" android:text="@string/upload_step_verify_pin_sub_header" android:layout_marginStart="@dimen/keyline_5" android:layout_marginEnd="@dimen/keyline_5" app:layout_constraintBottom_toTopOf="@+id/pin" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/header" app:layout_constraintVertical_chainStyle="2" style="?attr/textAppearanceBody2"/>
        <au.gov.health.covidsafe.ui.view.PinInputView android:id="@+id/pin" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/keyline_4" android:layout_marginBottom="@dimen/keyline_4" android:layout_marginStart="@dimen/keyline_5" android:layout_marginEnd="@dimen/keyline_5" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/subHeader"/>
        <androidx.appcompat.widget.AppCompatTextView android:textColor="@color/error" android:id="@+id/enter_pin_error_label" android:visibility="gone" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/keyline_5" android:layout_marginTop="@dimen/keyline_1" android:layout_marginRight="@dimen/keyline_5" android:text="@string/action_verify_invalid_pin" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/pin" style="?attr/textAppearanceBody2"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
