<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:id="@+id/root" android:layout_width="match_parent" android:layout_height="wrap_content" android:fillViewport="true">
    <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent" android:layout_height="wrap_content">
        <ImageView android:id="@+id/image" android:layout_width="212dp" android:layout_height="146dp" android:src="@drawable/illustration_upload_finished" android:scaleType="centerInside" app:layout_constraintBottom_toTopOf="@+id/header" app:layout_constraintDimensionRatio="2.26" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0" app:layout_constraintVertical_bias="0" app:layout_constraintVertical_chainStyle="2"/>
        <TextView android:textAppearance="?attr/textAppearanceHeadline2" android:id="@+id/header" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginTop="@dimen/keyline_4" android:text="@string/upload_finished_header" android:contentDescription="@string/upload_finished_header_content_description" android:layout_marginStart="@dimen/keyline_5" android:layout_marginEnd="@dimen/keyline_5" app:layout_constraintBottom_toTopOf="@+id/subHeader" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/image" app:layout_constraintVertical_chainStyle="2"/>
        <TextView android:id="@+id/subHeader" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginTop="@dimen/keyline_4" android:text="@string/upload_finished_sub_header" android:layout_marginStart="@dimen/keyline_5" android:layout_marginEnd="@dimen/keyline_5" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/header" app:layout_constraintVertical_chainStyle="2" style="?attr/textAppearanceBody2"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
